# hpc-ai-optimization-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY_OPTIMIZATION_SUMMARY.md  PAGES_OPTIMIZATION_SUMMARY.zh-CN.md  QWEN.md  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  lsp.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
changelog/: 2026-03-13_workflow-cpu-safe-ci.md  2026-03-22_entry-closure-phase1.md  2026-04-16-release-v0.3.0.md  README.md  RELEASE_NOTES_v0.3.0.md
cmake/: HPCAIConfig.cmake.in  hpc-ai-optimization-lab.pc.in
docker/: Dockerfile
docs/: 404.md  Doxyfile  guides.html  index.html  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts  config.ts
docs/_archive_standalone/: guides.html
docs/architecture/: index.md
docs/assets/: site.css
docs/en/: 03_reduction_optimization.md  04_flash_attention.md  05_cuda13_features.md  API_REFERENCE.md  ARCHITECTURE.md  PERFORMANCE_TUNING.md  README.md  TROUBLESHOOTING.md  changelog.md  index.md
docs/public/: create-assets.sh  site.webmanifest
docs/python/: conf.py  index.rst
docs/scripts/: sync-changelog.mjs
docs/setup/: development-setup.md
docs/tutorials/: index.md
docs/zh-CN/: 05_cuda13_features.md  API_REFERENCE.md  ARCHITECTURE.md  PERFORMANCE_TUNING.md  README.md  TROUBLESHOOTING.md  changelog.md  index.md
examples/: CMakeLists.txt  README.md
examples/01_elementwise/: relu_example.cu
examples/03_gemm/: gemm_benchmark.cu
examples/attention/: flash_attention_example.cu
examples/convolution/: conv_example.cu
examples/cuda13/: cuda13_example.cu
examples/elementwise/: relu_example.cu
examples/gemm/: gemm_benchmark.cu
examples/python/: advanced_usage.py  basic_usage.py  gemm_benchmark.ipynb
examples/quantization/: quant_example.cu
examples/reduction/: softmax_benchmark.cu
openspec/changes/: README.md
python/: CMakeLists.txt  requirements.txt
python/benchmark/: benchmark.py  test_cuda_surface_contract.py  test_runtime_surface.py
python/benchmark/suites/: __init__.py  gemm.py
python/bindings/: bindings.cpp  validation.hpp
scripts/: create-release.sh
specs/api/: README.md
tests/: CMakeLists.txt  test_utils.hpp
(+183 files in other folders)
